compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_const_extfn.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1178
expression: "const wibble = 1\n\n@external(erlang, \"module2\", \"function2\")\nfn wibble() -> Float\n"
---
----- SOURCE CODE
const wibble = 1

@external(erlang, "module2", "function2")
fn wibble() -> Float


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ const wibble = 1
  │ ^^^^^^^^^^^^ First defined here
  ·
4 │ fn wibble() -> Float
  │ ^^^^^^^^^^^ Redefined here

`wibble` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
