compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_constructors.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record Box { Box(x: Int) }\nrecord Boxy { Box(Int) }"
---
----- SOURCE CODE
record Box { Box(x: Int) }
record Boxy { Box(Int) }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:14
  │
1 │ record Box { Box(x: Int) }
  │              ^^^^^^^^^^^ First defined here
2 │ record Boxy { Box(Int) }
  │               ^^^^^^^^ Redefined here

`Box` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
