compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_constructors2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1083
expression: "record Boxy { Box(Int) }\nrecord Box { Box(x: Int) }"
---
----- SOURCE CODE
record Boxy { Box(Int) }
record Box { Box(x: Int) }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:15
  │
1 │ record Boxy { Box(Int) }
  │               ^^^^^^^^ First defined here
2 │ record Box { Box(x: Int) }
  │              ^^^^^^^^^^^ Redefined here

`Box` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
