compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_constructors3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record Boxy { Box(Int) Box(Float) }"
---
error: Duplicate definition
  ┌─ /src/one/two.rakun:1:15
  │
1 │ record Boxy { Box(Int) Box(Float) }
  │               ^^^^^^^^ ^^^^^^^^^^ Redefined here
  │               │         
  │               First defined here

`Box` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
