compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_function_names_5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n@external(erlang, \"a\", \"b\")\nfn dupe(x) -> x\nfn dupe() { 1 }\n"
---
----- SOURCE CODE

@external(erlang, "a", "b")
fn dupe(x) -> x
fn dupe() { 1 }


----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.rakun:3:1
  │
3 │ fn dupe(x) -> x
  │ ^^^^^^^^^^ First defined here
4 │ fn dupe() { 1 }
  │ ^^^^^^^^^ Redefined here

`dupe` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
