compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__field_not_in_all_variants.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub record Person {\n    Teacher(name: String, age: Int, title: String)\n    Student(name: String, age: Int)\n}\npub fn get_title(person: Person) { person.title }"
---
----- SOURCE CODE

pub record Person {
    Teacher(name: String, age: Int, title: String)
    Student(name: String, age: Int)
}
pub fn get_title(person: Person) { person.title }

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.rakun:6:42
  │
6 │ pub fn get_title(person: Person) { person.title }
  │                                          ^^^^^^ This field does not exist

The value being accessed has this type:

    Person

It has these accessible fields:

    .age
    .name

Note: The field you are trying to access might not be consistently present
or positioned across the custom type's variants, preventing reliable
access. Ensure the field exists in the same position and has the same
type in all variants, or pattern matching on it to enable direct accessor
syntax.
